# Merket_for_10_M_uesr

./: .gitignore  LICENSE  README.md  STRUCTURE.md  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
apps/buyer/: next.config.ts  package-lock.json  package.json
deploy/docker/: ai.Dockerfile  catalog.Dockerfile  course.Dockerfile  (+6 more)
docs/: TECHNICAL-OVERVIEW.md
services/py/identity/: pyproject.toml
services/py/identity/app/: config.py  main.py
services/py/identity/app/domain/: password_reset.py  token.py  user.py  verification.py
services/py/identity/app/repositories/: password_reset_repo.py  token_repo.py  user_repo.py  verification_repo.py
services/py/identity/app/routes/: admin.py  auth.py
services/py/identity/app/services/: auth_service.py
services/py/identity/migrations/: 001_users.sql  002_add_role.sql  004_refresh_tokens.sql  005_email_verification.sql  006_password_reset.sql
services/py/identity/tests/: conftest.py  test_admin_routes.py  test_admin_service.py  test_auth_routes.py  test_auth_service.py  test_cors.py  test_health.py  test_rate_limit.py  test_refresh_tokens.py
services/py/payment/: pyproject.toml
services/py/payment/app/: main.py
services/py/payment/app/domain/: payment.py
services/py/payment/app/repositories/: payment_repo.py
services/py/payment/app/routes/: payments.py
services/py/payment/app/services/: payment_service.py
services/py/payment/migrations/: 001_payments.sql  002_indexes.sql
services/py/payment/tests/: conftest.py  test_health.py  test_payment_service.py  test_payments_routes.py
(+171 files in other folders)
